--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ instagram:
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-ga_domain: 
+ga_domain:k 
 ga_tracking_id: 
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
