--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,12 @@ author-bio: ""
 
 twitter: happyo
 github: happyo
-dribbble: 
-instagram: 
+instagram: happyo
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-ga_domain:k 
-ga_tracking_id: 
+#ga_domain: 
+#ga_tracking_id: 
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
 
