--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
 
+plugins:
+  - jekyll-org
+
+org:
+  liquid: true
 # sass:
 #   sass_dir: _scss
 #   style: :compressed
