--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://happyo.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = '薛定谔的水货'
 theme = 'schrodingerscat'
